--- a/views/index.html
+++ b/views/index.html
@@ -14,9 +14,7 @@
     <link rel="stylesheet" href="styless.css">
 
     <title>TypeScript Vehícles</title>
-    <script src="../models/car.js"></script>
-    <script src="../models/wheel.js"></script>
-    <script src="../controllers/controller.js"></script>
+
 </head>
 
 <body>
@@ -91,12 +89,15 @@
                 <input type="button" class="btn btn-dark" onclick=" createWheels()" value="Introdueix" />
             </div>
         </form>
-        <div id= table></div>
+        <div id="table"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+    <script src="../models/car.js"></script>
+    <script src="../models/wheel.js"></script>
+    <script src="../controllers/controller.js"></script>
 </body>
 
 </html>
