--- a/views/styless.css
+++ b/views/styless.css
@@ -1,5 +1,5 @@
 body, html {
-  background-image: url("/Typescript/Vehicles/img/pexels-arthouse-studio-4344876.jpg");
+  background-image: url(img/pexels-arthouse-studio-4344876.webp);
   background-size: cover;
   background-image: no-repeat;
   height: 100%;
